@@ -26,7 +26,7 @@
 
 
 //#define EMULATOR_VERSION "11.1-SN"
-#define EMULATOR_VERSION "11.1-B1"
+#define EMULATOR_VERSION "11.1-B2"
 //#define EMULATOR_VERSION "11.1-RC"
 //#define EMULATOR_VERSION "11.1"
 #define SNAPSHOT_VERSION
